--- a/statisfy/templates/index.html
+++ b/statisfy/templates/index.html
@@ -1,9 +1,7 @@
-<!doctype html>
-
-<title>Statisfy</title>
+{% extends "base.html" %}
+{% block main_content %}{% endblock %}
 
 <body>
 
-{% block main_content %}{% endblock %}
 
 </body>
