--- a/statisfy/templates/_show_acquisitions.html
+++ b/statisfy/templates/_show_acquisitions.html
@@ -1,5 +1,5 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 
-{% for acquisitions in acquisitions %}
+{% for acquisition in acquisitions %}
 <p>Title: {{ acquisition.book.title }}, Author: {{ acquisition.book.author }}</p>
 {% endfor %}
