--- a/statisfy/templates/_show_acquisitions.html
+++ b/statisfy/templates/_show_acquisitions.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
+{% block content %}
 
 {% for acquisition in acquisitions %}
 <p>Title: {{ acquisition.book.title }}, Author: {{ acquisition.book.author }}</p>
 {% endfor %}
+
+{% endblock %}
