books #index is a go

--- a/statisfy/templates/base.html
+++ b/statisfy/templates/base.html
@@ -3,4 +3,12 @@
   <head>
     <title>Statisfy</title>
   </head>
+
+  <body>
+    <h1>
+      Welcome to Statisfy
+    </h1>
+
+    {% block content %}{% endblock %}
+  <body>
 </html>
