figure out the basic CRUD stuff for book object

--- a/statisfy/templates/_get_book.html
+++ b/statisfy/templates/_get_book.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
-{% for book in books %}
 <p>Title: {{ book.title }}
   Author: {{ book.author }}
   Length: {{ book.length_category }}
   Age Group {{ book.age_group }}
 </p>
 
-{% endfor %}
-
+<a href="/book/{{ book.id }}/edit">Edit Me</a>
+<a href="/book/{{ book.id }}/delete">Destroy Me!</a>
 {% endblock %}
